# open_ai_agents-sdk

./: one.ipynb
first/: README.md  pyproject.toml
first/output/: decision.md  oppose.md  propose.md
first/src/first/: crew.py  main.py
first/src/first/config/: agents.yaml  tasks.yaml
