[project]
name = "first"
version = "0.1.0"
description = "first using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
first = "first.main:run"
run_crew = "first.main:run"
train = "first.main:train"
replay = "first.main:replay"
test = "first.main:test"
run_with_trigger = "first.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
